Unicode quotation marks.

--- a/index.html
+++ b/index.html
@@ -118,11 +118,11 @@
             <h5>Josh Wilson - VP of Product Management at Raizlabs</h5>
 
             <p class="quote">
-              Dan is an extremely effective developer because his communication skills
+              &#10077;Dan is an extremely effective developer because his communication skills
               are as strong as his technical ability and he understands the value
               of flexibility and empathy when working in a team. He also has an infectious
               enthusiasm for the craft of software and picks up new languages, patterns,
-              and technologies very quickly.
+              and technologies very quickly.&#10078;
             </p>
           </div>
 
@@ -136,14 +136,14 @@
             <h5>Jeremiah Atwood - Web Platform Lead at Raizlabs</h5>
 
             <p class="quote">
-              Dan is an avid technologist who is always teaching himself new concepts
+              &#10077;Dan is an avid technologist who is always teaching himself new concepts
               and technologies. On a recent Android and API project, he jumped in and
               took over the API work, working directly with client developers to deliver
               an ambitious product. Dan was also instrumental in kicking off an initiative
               to record our internal Tech Talks and share them with the community.
               His presentation on encryption was informative, well-researched, well-rehearsed
               and demonstrated his grasp of a complex subject. Dan is definitely someone
-              you want on your team.
+              you want on your team.&#10078;
             </p>
           </div>
 
@@ -157,12 +157,12 @@
             <h5>Matt Buckley - Mobile Engineer at Raizlabs</h5>
 
             <p class="quote">
-              Dan consistently delivers high-quality code, asking probing questions
+              &#10077;Dan consistently delivers high-quality code, asking probing questions
               to clarify requirements and ensuring that features are completed to
               spec and ahead of schedule. He boasts a wide-ranging skill set. Given
               a set of requirements, Dan draws on expertise in Ruby, JavaScript, and
               Elixir. He's friendly, fun-loving, and a true asset to any engineering
-              team. I'd gladly work with Dan again any time.
+              team. I'd gladly work with Dan again any time.&#10078;
             </p>
           </div>
 
