--- a/index.html
+++ b/index.html
@@ -98,7 +98,9 @@
         </div>
 
         <div class="four columns">
-          <img class="headshot" src="images/profile-pic.jpg"></img>
+          <a href="https://www.linkedin.com/in/danmurphydev/" target="_blank">
+            <img class="headshot" src="images/profile-pic.jpg"></img>
+          </a>
         </div>
       </section>
 
@@ -127,7 +129,9 @@
           </div>
 
           <div class="four columns">
-            <img class="headshot" src="images/josh_wilson.jpg"></img>
+            <a href="https://www.linkedin.com/in/josh-wilson-6052081" target="_blank">
+              <img class="headshot" src="images/josh_wilson.jpg"></img>
+            </a>
           </div>
         </div>
 
@@ -148,7 +152,9 @@
           </div>
 
           <div class="four columns">
-            <img class="headshot" src="images/jeremiah_atwood.jpg"></img>
+            <a href="https://www.linkedin.com/in/jeremiahatwood/" target="_blank">
+              <img class="headshot" src="images/jeremiah_atwood.jpg"></img>
+            </a>
           </div>
         </div>
 
@@ -167,7 +173,9 @@
           </div>
 
           <div class="four columns">
-            <img class="headshot" src="images/matt_buckley.jpg"></img>
+            <a href="https://www.linkedin.com/in/mattbuckley1/" target="_blank">
+              <img class="headshot" src="images/matt_buckley.jpg"></img>
+            </a>
           </div>
         </div>
       </section>
