Add "Blog" and "Talks" sections

--- a/index.html
+++ b/index.html
@@ -309,50 +309,76 @@
         </div>
       </section>
 
-      <!-- <section class="blog">
-        <h2>Blog</h2>
-        <p>
-          <a href="http://murphydbuffalo.tumblr.com/">On and On</a> began as an exercise
-          in recording my experiences at <a href="https://www.launchacademy.com/">
-          Launch Academy</a>, a web development bootcamp in Boston. It turns out that
-          I really enjoyed writing, and have continued to journal and blog regularly.
+      <section class="container blog">
+        <div class="row">
+          <div class="eight columns">
+            <h2>Blog</h2>
+            <p>
+              <a href="http://murphydbuffalo.tumblr.com/">On and On</a> began as an exercise
+              in recording my experiences at <a href="https://www.launchacademy.com/">
+              Launch Academy</a>, a web development bootcamp in Boston. It turns out that
+              I really enjoyed writing, and have continued to journal and blog regularly.
 
-          Up to this point the blog has focused almost exclusively on software development
-          topics, but it will beging expanding to more subjects including entrepreneurship,
-          statistics and data analysis, and more.
-        </p>
+              Up to this point the blog has focused almost exclusively on software development
+              topics, but it will beging expanding to more subjects including entrepreneurship,
+              statistics and data analysis, and more.
+            </p>
+          </div>
+
+          <div class="four columns">
+            <a href="https://murphydbuffalo.tumblr.com" target="_blank">
+              <img class="onandon headshot" src="images/onandon.png"/>
+            </a>
+        </div>
       </section>
 
-      <section class="talks">
-        <h2>Talks</h2>
-        <p>Video recordings of these talks coming soon!</p>
+      <div class="spacer">&nbsp;</div>
 
-        <ul>
-          <li>
-            <h3>Cryptography in Colors - Understanding Public Key Cryptography</h3>
-            <img src="images/cryptography_slide.png"></img>
+      <section class="container talks">
+        <div class="row">
+          <div class="eight columns">
+            <h2>Talks</h2>
+            <h5><em>Video recordings of these talks coming soon!</em></h5>
+          </div>
 
+          <div class="four columns"></div>
+        </div>
+
+        <div class="row subsection">
+          <div class="seven columns">
+            <h5>Cryptography in Colors</h5>
+            <h6><em>Understanding Public Key Cryptography</em></h6>
             <p>
               A math-light explanation of one of the core technologies of the internet:
               public key cryptography. We'll use metaphors from Brit Cruise's amazing
-              Art of the Problem video series on YouTube to explore this topic in-depth.
+              <a href="" target="_blank"> Art of the Problem</a> video series on
+              YouTube to explore this topic in-depth.
             </p>
-          </li>
+          </div>
 
-          <li>
-            <h3>Demystifying AI - A Look Inside Machine Learning Algorithms</h3>
-            <img src="images/machine_learning_slide.png"></img>
+          <div class="five columns">
+            <img src="images/cryptography_slide.png"></img>
+          </div>
+        </div>
 
+        <div class="row subsection">
+          <div class="seven columns">
+            <h5>Demystifying AI</h5>
+            <h6><em>A Look Inside Machine Learning Algorithms</em></h6>
             <p>
               A plain-English definition of machine learning followed by a detailed
               look at how some fundamental ML algorithms are implemented. By the end
               of this talk you'll see that there's nothing mystical about machine learning.
             </p>
-          </li>
-        </ul>
+          </div>
+
+          <div class="five columns">
+            <img src="images/machine_learning_slide.png"></img>
+          </div>
+        </div>
       </section>
 
-      <section class="certificates">
+      <!-- <section class="certificates">
         <h2>Continuing Education</h2>
         <ul>
           <li>
