Rough first pass of "Certificates" section

--- a/index.html
+++ b/index.html
@@ -378,37 +378,37 @@
         </div>
       </section>
 
-      <!-- <section class="certificates">
-        <h2>Continuing Education</h2>
-        <ul>
-          <li>
-            <h3>
-              <a href="https://www.coursera.org/account/accomplishments/verify/N6HKQV6HR84E">
-                Machine Learning from Coursera
-              </a>
-            </h3>
+      <section class="container certificates">
+        <div class="row">
+          <div class="eight columns">
+            <h2>Continuing Education</h2>
+          </div>
+        </div>
 
-            <div class="section-flex-container">
-              <div class="content">
-                <p>
-                  From the Coursera course description:
-                  <blockquote>
-                    "This machine learning class was the class that had started Coursera.
-                    I'm excited to be teaching it again. By the time you finish this class,
-                    you'll know how to apply the most advanced machine learning algorithms
-                    to such problems as anti-spam, image recognition, clustering, building
-                    recommender systems, and many other problems. You'll also know how
-                    to select the right algorithm for the right job, as well as become
-                    expert at 'debugging' and figuring out how to improve a learning algorithm's
-                    performance."
-                  </blockquote>
-                </p>
-              </div>
+        <div class="row">
+          <div class="eight columns">
+            <a href="https://www.coursera.org/account/accomplishments/verify/N6HKQV6HR84E" target="_blank">
+              <h5>Dan's Certificate in Machine Learning from Coursera</h5>
+            </a>
 
-              <img src="images/coursera_ml_course.jpg"></img>
-          </li>
-        </ul>
-      </section> -->
+            <p>From the Coursera course description:</p>
+            <p class="quote">
+              &#10077;This machine learning class was the class that had started Coursera.
+              I'm excited to be teaching it again. By the time you finish this class,
+              you'll know how to apply the most advanced machine learning algorithms
+              to such problems as anti-spam, image recognition, clustering, building
+              recommender systems, and many other problems. You'll also know how
+              to select the right algorithm for the right job, as well as become
+              expert at 'debugging' and figuring out how to improve a learning algorithm's
+              performance.&#10078;
+            </p>
+          </div>
+
+          <div class="four columns">
+            <img src="images/coursera_ml_course.png"></img>
+          </div>
+        </div>
+      </section>
     </div>
   </body>
 </html>
