Fixed invalid syntax caught by WC3 validator.

--- a/about.html
+++ b/about.html
@@ -1,11 +1,9 @@
 <!DOCTYPE HTML>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
-
     <title>Dan Murphy - Software Developer in Boston, MA</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
     <meta content="
       Dan Murphy is a software developer based in Boston, Massachusetts. He atteneded
       the web development bootcamp Launch Academy in 2014 and has worked at Barbershop Labs,
@@ -49,12 +47,12 @@
       <div class="four columns offset-by-four">
         <h2>Hi, I'm Dan</h2>
       </div>
-    <div>
+    </div>
 
     <div class="row">
       <div class="four columns offset-by-four">
         <a href="https://www.linkedin.com/in/danmurphydev" target="_blank">
-          <img class="headshot" src="images/profile-pic.jpg"></img>
+          <img alt="Dan's profile picture" class="headshot" src="images/profile-pic.jpg"/>
         </a>
       </div>
     </div>
