--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 <!DOCTYPE HTML>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
-
     <title>Dan Murphy - Software Developer in Boston, MA</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
     <meta content="
       Dan Murphy is a software developer based in Boston, Massachusetts. He atteneded
       the web development bootcamp Launch Academy in 2014 and has worked at Barbershop Labs,
@@ -50,12 +48,12 @@
         <div class="four columns offset-by-four">
           <h2>Hi, I'm Dan</h2>
         </div>
-      <div>
+      </div>
 
       <div class="row">
         <div class="four columns offset-by-four">
           <a href="/about.html">
-            <img class="headshot" src="images/profile-pic.jpg"></img>
+            <img alt="Dan's profile picture." class="headshot" src="images/profile-pic.jpg"/>
           </a>
         </div>
       </div>
@@ -73,19 +71,19 @@
       <div class="row">
         <div class="four columns">
           <a href="/recommendations.html#josh">
-            <img class="headshot" src="images/josh_wilson.jpg"></img>
+            <img alt="Josh Wilson's LinkedIn picture" class="headshot" src="images/josh_wilson.jpg"/>
           </a>
         </div>
 
         <div class="four columns">
           <a href="/recommendations.html#jeremiah">
-            <img class="headshot" src="images/jeremiah_atwood.jpg"></img>
+            <img alt="Jeremiah Atwood's LinkedIn picture." class="headshot" src="images/jeremiah_atwood.jpg"/>
           </a>
         </div>
 
         <div class="four columns">
           <a href="/recommendations.html#matt">
-            <img class="headshot" src="images/matt_buckley.jpg"></img>
+            <img alt="Matt Buckley's LinkedIn picture." class="headshot" src="images/matt_buckley.jpg"/>
           </a>
         </div>
       </div>
@@ -109,16 +107,17 @@
 
         <div class="four columns">
           <a class="logo" href="/work.html#drugdev">
-            <img class="drugdev" src="images/drugdev_logo.png"></img>
+            <img alt="The DrugDev logo." class="drugdev" src="images/drugdev_logo.png"/>
           </a>
         </div>
 
         <div class="four columns">
           <a class="logo" href="/work.html#kitewheel">
-            <img class="kitewheel" src="images/kitewheel_logo.png"></img>
+            <img alt="The Kitewhel logo." class="kitewheel" src="images/kitewheel_logo.png"/>
           </a>
         </div>
-      </section>
+      </div>
+    </section>
 
     <div class="spacer">&nbsp;</div>
 
@@ -132,7 +131,7 @@
 
       <div class="row">
         <div class="six columns">
-          <img src="images/cryptography_slide.png"></img>
+          <img alt="The first slide from Dan's talk on public key cryptography." src="images/cryptography_slide.png"/>
           <p>
             A math-light explanation of one of the core technologies of the internet:
             public key cryptography. We'll use metaphors from Brit Cruise's amazing
@@ -142,7 +141,7 @@
         </div>
 
         <div class="six columns">
-          <img src="images/machine_learning_slide.png"></img>
+          <img alt="The first slide from Dan's talk on machine learning." src="images/machine_learning_slide.png"/>
           <p>
             A plain-English definition of machine learning followed by a detailed
             look at how some fundamental ML algorithms are implemented. By the end
@@ -164,7 +163,7 @@
       <div class="row">
         <div class="four columns offset-by-four">
           <a href="https://murphydbuffalo.tumblr.com" target="_blank">
-            <img class="onandon headshot" src="images/onandon.png"/>
+            <img alt="The monkey image from Dan's blog, On and On." class="onandon headshot" src="images/onandon.png"/>
           </a>
         </div>
       </div>
