--- a/recommendations.html
+++ b/recommendations.html
@@ -1,11 +1,9 @@
 <!DOCTYPE HTML>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
-
     <title>Dan Murphy - Software Developer in Boston, MA</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
     <meta content="
       Dan Murphy is a software developer based in Boston, Massachusetts. He atteneded
       the web development bootcamp Launch Academy in 2014 and has worked at Barbershop Labs,
@@ -49,12 +47,12 @@
       <div class="six columns offset-by-three">
         <h2>What People Are Saying</h2>
       </div>
-    <div>
+    </div>
 
     <div class="row" id="josh">
       <div class="four columns offset-by-four">
         <a href="https://www.linkedin.com/in/josh-wilson-6052081" target="_blank">
-          <img class="headshot" src="images/josh_wilson.jpg"></img>
+          <img alt="Josh Wilson's LinkedIn image." class="headshot" src="images/josh_wilson.jpg"/>
         </a>
       </div>
     </div>
@@ -80,7 +78,7 @@
     <div class="row" id="jeremiah">
       <div class="four columns offset-by-four">
         <a href="https://www.linkedin.com/in/jeremiahatwood/" target="_blank">
-          <img class="headshot" src="images/jeremiah_atwood.jpg"></img>
+          <img alt="Jeremiah Atwood's LinkedIn picture." class="headshot" src="images/jeremiah_atwood.jpg"/>
         </a>
       </div>
     </div>
@@ -109,7 +107,7 @@
     <div class="row" id="matt">
       <div class="four columns offset-by-four">
         <a href="https://www.linkedin.com/in/mattbuckley1/" target="_blank">
-          <img class="headshot" src="images/matt_buckley.jpg"></img>
+          <img alt="Matt Buckley's LinkedIn picture." class="headshot" src="images/matt_buckley.jpg"/>
         </a>
       </div>
     </div>
