--- a/index.html
+++ b/index.html
@@ -131,22 +131,15 @@
 
       <div class="row">
         <div class="six columns">
-          <img alt="The first slide from Dan's talk on public key cryptography." src="images/cryptography_slide.png"/>
-          <p>
-            A math-light explanation of one of the core technologies of the internet:
-            public key cryptography. We'll use metaphors from Brit Cruise's amazing
-            <a href="" target="_blank"> Art of the Problem</a> video series on
-            YouTube to explore this topic in-depth.
-          </p>
+          <a href="/talks.html#cryptography">
+            <img alt="The first slide from Dan's talk on public key cryptography." src="images/cryptography_slide.png"/>
+          </a>
         </div>
 
         <div class="six columns">
-          <img alt="The first slide from Dan's talk on machine learning." src="images/machine_learning_slide.png"/>
-          <p>
-            A plain-English definition of machine learning followed by a detailed
-            look at how some fundamental ML algorithms are implemented. By the end
-            of this talk you'll see that there's nothing mystical about machine learning.
-          </p>
+          <a href="/talks.html#machine-learning">
+            <img alt="The first slide from Dan's talk on machine learning." src="images/machine_learning_slide.png"/>
+          </a>
         </div>
       </div>
     </section>
