--- a/recommendations.html
+++ b/recommendations.html
@@ -44,25 +44,25 @@
     <![endif]-->
 
     <div class="row">
-      <div class="six columns offset-by-three">
-        <h2>What People Are Saying</h2>
-      </div>
-    </div>
-
-    <div class="row" id="josh">
-      <div class="four columns offset-by-four">
-        <a href="https://www.linkedin.com/in/josh-wilson-6052081" target="_blank">
-          <img alt="Josh Wilson's LinkedIn image." class="headshot" src="images/josh_wilson.jpg"/>
-        </a>
+      <div class="eight columns offset-by-two centered-text">
+        <h1>What People Are Saying</h1>
       </div>
     </div>
 
     <div class="spacer">&nbsp;</div>
 
+    <div class="row" id="josh">
+      <div class="four columns offset-by-four centered-text">
+        <a href="https://www.linkedin.com/in/josh-wilson-6052081" target="_blank">
+          <img alt="Josh Wilson's LinkedIn picture." class="headshot" src="images/josh_wilson.jpg"/>
+        </a>
+      </div>
+    </div>
+
     <div class="row">
       <div class="eight columns offset-by-two">
-        <h5>Josh Wilson - VP of Product Management at Raizlabs</h5>
-
+        <h2 class="centered-text">Josh Wilson</h2>
+        <h4 class="centered-text">VP of Product Management at Raizlabs</h4>
         <p class="quote">
           &#10077;Dan is an extremely effective developer because his communication skills
           are as strong as his technical ability and he understands the value
@@ -76,19 +76,17 @@
     <div class="spacer">&nbsp;</div>
 
     <div class="row" id="jeremiah">
-      <div class="four columns offset-by-four">
+      <div class="four columns offset-by-four centered-text">
         <a href="https://www.linkedin.com/in/jeremiahatwood/" target="_blank">
           <img alt="Jeremiah Atwood's LinkedIn picture." class="headshot" src="images/jeremiah_atwood.jpg"/>
         </a>
       </div>
     </div>
 
-    <div class="spacer">&nbsp;</div>
-
     <div class="row">
       <div class="eight columns offset-by-two">
-        <h5>Jeremiah Atwood - Web Platform Lead at Raizlabs</h5>
-
+        <h2 class="centered-text">Jeremiah Atwood</h2>
+        <h4 class="centered-text">Web Platform Lead at Raizlabs</h4>
         <p class="quote">
           &#10077;Dan is an avid technologist who is always teaching himself new concepts
           and technologies. On a recent Android and API project, he jumped in and
@@ -105,19 +103,17 @@
     <div class="spacer">&nbsp;</div>
 
     <div class="row" id="matt">
-      <div class="four columns offset-by-four">
+      <div class="four columns offset-by-four centered-text">
         <a href="https://www.linkedin.com/in/mattbuckley1/" target="_blank">
           <img alt="Matt Buckley's LinkedIn picture." class="headshot" src="images/matt_buckley.jpg"/>
         </a>
       </div>
     </div>
 
-    <div class="spacer">&nbsp;</div>
-
     <div class="row">
       <div class="eight columns offset-by-two">
-        <h5>Matt Buckley - Mobile Engineer at Raizlabs</h5>
-
+        <h2 class="centered-text">Matt Buckley</h2>
+        <h4 class="centered-text">Mobile Engineer at Raizlabs</h4>
         <p class="quote">
           &#10077;Dan consistently delivers high-quality code, asking probing questions
           to clarify requirements and ensuring that features are completed to
@@ -129,4 +125,4 @@
       </div>
     </div>
   </body>
-</html>
+  </html>
