--- a/about.html
+++ b/about.html
@@ -44,20 +44,20 @@
     <![endif]-->
 
     <div class="row">
-      <div class="four columns offset-by-four">
+      <div class="four columns offset-by-four centered-text">
         <h2>Hi, I'm Dan</h2>
       </div>
     </div>
 
+    <div class="spacer">&nbsp;</div>
+
     <div class="row">
-      <div class="four columns offset-by-four">
+      <div class="four columns offset-by-four centered-text">
         <a href="https://www.linkedin.com/in/danmurphydev" target="_blank">
           <img alt="Dan's profile picture" class="headshot" src="images/profile-pic.jpg"/>
         </a>
       </div>
     </div>
-
-    <div class="spacer">&nbsp;</div>
 
     <div class="eight columns offset-by-two">
       <p>
