--- a/talks.html
+++ b/talks.html
@@ -45,8 +45,8 @@
 
     <div class="row">
       <div class="four columns offset-by-four">
-        <h2 style="margin-bottom: 0px;">Public Speaking</h2>
-        <h6><em>Video recordings coming soon!</em></h6>
+        <h2 class="centered-text" style="margin-bottom: 0px;">Public Speaking</h2>
+        <h6 class="centered-text"><em>Video recordings coming soon!</em></h6>
       </div>
     </div>
 
