Better spacing and center alignment on index.html

--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
 
     <section class="container about">
       <div class="row">
-        <div class="four columns offset-by-four">
+        <div class="four columns offset-by-four centered-text">
           <h2>Hi, I'm Dan</h2>
         </div>
       </div>
 
       <div class="row">
-        <div class="four columns offset-by-four">
+        <div class="four columns offset-by-four centered-text">
           <a href="/about.html">
             <img alt="Dan's profile picture." class="headshot" src="images/profile-pic.jpg"/>
           </a>
@@ -59,16 +59,16 @@
       </div>
     </section>
 
-    <div class="spacer">&nbsp;</div>
+    <div class="big-spacer">&nbsp;</div>
 
     <section class="recommendations container">
       <div class="row">
-        <div class="six columns offset-by-three">
+        <div class="six columns offset-by-three centered-text">
           <h2>What People Are Saying</h2>
         </div>
       </div>
 
-      <div class="row">
+      <div class="row centered-text">
         <div class="four columns">
           <a href="/recommendations.html#josh">
             <img alt="Josh Wilson's LinkedIn picture" class="headshot" src="images/josh_wilson.jpg"/>
@@ -89,9 +89,9 @@
       </div>
     </section>
 
-    <div class="spacer">&nbsp;</div>
+    <div class="big-spacer">&nbsp;</div>
 
-    <section class="work container">
+    <section class="work container centered-text">
       <div class="row">
         <div class="six columns offset-by-three">
           <h2>Check Out My Work</h2>
@@ -119,9 +119,9 @@
       </div>
     </section>
 
-    <div class="spacer">&nbsp;</div>
+    <div class="big-spacer">&nbsp;</div>
 
-    <section class="container talks">
+    <section class="container talks centered-text">
       <div class="row">
         <div class="four columns offset-by-four">
           <h2 style="margin-bottom: 0px;">Public Speaking</h2>
@@ -144,9 +144,9 @@
       </div>
     </section>
 
-    <div class="spacer">&nbsp;</div>
+    <div class="big-spacer">&nbsp;</div>
 
-    <section class="container blog">
+    <section class="container blog centered-text">
       <div class="row">
         <div class="six columns offset-by-three">
           <h2>The <em>On and On</em> Blog</h2>
@@ -159,19 +159,6 @@
             <img alt="The monkey image from Dan's blog, On and On." class="onandon headshot" src="images/onandon.png"/>
           </a>
         </div>
-      </div>
-
-      <div class="six columns offset-by-three">
-        <p>
-          <a href="http://murphydbuffalo.tumblr.com/">On and On</a> began as an exercise
-          in recording my experiences at <a href="https://www.launchacademy.com/">
-          Launch Academy</a>, a web development bootcamp in Boston. It turns out that
-          I really enjoyed writing, and have continued to journal and blog regularly.
-
-          Up to this point the blog has focused almost exclusively on software development
-          topics, but it will beging expanding to more subjects including entrepreneurship,
-          statistics and data analysis, and more.
-        </p>
       </div>
     </section>
   </body>
