Added a home icon link to each page.

--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
     <!--[if lt IE 10]>
       <p>You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
+    <nav class="home">
+      <a href="/index.html">
+        <img alt="The home icon." height="50" width="50" src="images/home.svg"/>
+      </a>
+    </nav>
 
     <section class="container about">
       <div class="row">
