--- a/recommendations.html
+++ b/recommendations.html
@@ -43,6 +43,12 @@
       <p>You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
+    <nav class="home">
+      <a href="/index.html">
+        <img alt="The home icon." height="50" width="50" src="images/home.svg"/>
+      </a>
+    </nav>
+  
     <div class="row">
       <div class="eight columns offset-by-two centered-text">
         <h1>What People Are Saying</h1>
