--- a/about.html
+++ b/about.html
@@ -43,6 +43,12 @@
       <p>You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
+    <nav class="home">
+      <a href="/index.html">
+        <img alt="The home icon." height="50" width="50" src="images/home.svg"/>
+      </a>
+    </nav>
+
     <div class="row">
       <div class="four columns offset-by-four centered-text">
         <h2>Hi, I'm Dan</h2>
