Change wording of Work header.

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <section class="work container centered-text">
       <div class="row">
         <div class="six columns offset-by-three">
-          <h2>Check Out My Work</h2>
+          <h2>What I've Done</h2>
         </div>
       </div>
 
