--- a/work.html
+++ b/work.html
@@ -51,7 +51,7 @@
 
     <div class="row">
       <div class="six columns offset-by-three centered-text">
-        <h1>Check Out My Work</h1>
+        <h1>What I've Done</h1>
       </div>
     </div>
 
