--- a/talks.html
+++ b/talks.html
@@ -60,12 +60,15 @@
 
     <div class="row" id="cryptography">
       <div class="eight columns offset-by-two">
-        <img alt="The first slide from Dan's talk on public key cryptography." src="images/cryptography_slide.png"/>
+        <div class="centered-text">
+          <img alt="The first slide from Dan's talk on public key cryptography." src="images/cryptography_slide.png"/>
+        </div>
+
         <p>
           A math-light explanation of one of the core technologies of the internet:
           public key cryptography. We'll use metaphors from Brit Cruise's amazing
-          <a href="" target="_blank"> Art of the Problem</a> video series on
-          YouTube to explore this topic in-depth.
+          <a href="https://www.youtube.com/user/ArtOfTheProblem" target="_blank">
+             Art of the Problem</a> video series on YouTube to explore this topic in-depth.
         </p>
       </div>
     </div>
@@ -74,7 +77,10 @@
 
     <div class="row" id="machine-learning">
       <div class="eight columns offset-by-two">
-        <img alt="The first slide from Dan's talk on machine learning." src="images/machine_learning_slide.png"/>
+        <div class="centered-text">
+          <img class="centered-text" alt="The first slide from Dan's talk on machine learning." src="images/machine_learning_slide.png"/>
+        </div>
+
         <p>
           A plain-English definition of machine learning followed by a detailed
           look at how some fundamental ML algorithms are implemented. By the end
