--- a/index.html
+++ b/index.html
@@ -42,129 +42,147 @@
     <!--[if lt IE 10]>
       <p>You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
+
     <nav class="home">
       <a href="/index.html">
         <img alt="The home icon." height="50" width="50" src="images/home.svg"/>
       </a>
     </nav>
 
-    <section class="container about">
-      <div class="row">
-        <div class="four columns offset-by-four centered-text">
-          <h2>Hi, I'm Dan</h2>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="four columns offset-by-four centered-text">
-          <a href="/about.html">
-            <img alt="Dan's profile picture." class="headshot" src="images/profile-pic.jpg"/>
-          </a>
-        </div>
-      </div>
-    </section>
-
-    <div class="big-spacer">&nbsp;</div>
-
-    <section class="recommendations container">
-      <div class="row">
-        <div class="six columns offset-by-three centered-text">
-          <h2>What People Are Saying</h2>
-        </div>
-      </div>
-
-      <div class="row centered-text">
-        <div class="four columns">
-          <a href="/recommendations.html#josh">
-            <img alt="Josh Wilson's LinkedIn picture" class="headshot" src="images/josh_wilson.jpg"/>
-          </a>
+    <div class="full-width-background">
+      <section class="container about">
+        <div class="row">
+          <div class="four columns offset-by-four centered-text">
+            <h2>Hi, I'm Dan</h2>
+          </div>
         </div>
 
-        <div class="four columns">
-          <a href="/recommendations.html#jeremiah">
-            <img alt="Jeremiah Atwood's LinkedIn picture." class="headshot" src="images/jeremiah_atwood.jpg"/>
-          </a>
+        <div class="row">
+          <div class="four columns offset-by-four centered-text">
+            <a href="/about.html">
+              <img alt="Dan's profile picture." class="headshot" src="images/profile-pic.jpg"/>
+            </a>
+          </div>
+        </div>
+      </section>
+
+      <div class="spacer">&nbsp;</div>
+    </div>
+
+    <div class="full-width-background">
+      <div class="spacer">&nbsp;</div>
+
+      <section class="recommendations container">
+        <div class="row">
+          <div class="six columns offset-by-three centered-text">
+            <h2>What People Are Saying</h2>
+          </div>
         </div>
 
-        <div class="four columns">
-          <a href="/recommendations.html#matt">
-            <img alt="Matt Buckley's LinkedIn picture." class="headshot" src="images/matt_buckley.jpg"/>
-          </a>
+        <div class="row centered-text">
+          <div class="four columns">
+            <a href="/recommendations.html#josh">
+              <img alt="Josh Wilson's LinkedIn picture" class="headshot" src="images/josh_wilson.jpg"/>
+            </a>
+          </div>
+
+          <div class="four columns">
+            <a href="/recommendations.html#jeremiah">
+              <img alt="Jeremiah Atwood's LinkedIn picture." class="headshot" src="images/jeremiah_atwood.jpg"/>
+            </a>
+          </div>
+
+          <div class="four columns">
+            <a href="/recommendations.html#matt">
+              <img alt="Matt Buckley's LinkedIn picture." class="headshot" src="images/matt_buckley.jpg"/>
+            </a>
+          </div>
         </div>
-      </div>
-    </section>
+      </section>
 
-    <div class="big-spacer">&nbsp;</div>
+      <div class="spacer">&nbsp;</div>
+    </div>
 
-    <section class="work container centered-text">
-      <div class="row">
-        <div class="six columns offset-by-three">
-          <h2>What I've Done</h2>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="four columns">
-          <a class="logo" href="/work.html#raizlabs">
-            <svg class="raizlabs" width="212" height="63" viewBox="0 0 116 23" xmlns="http://www.w3.org/2000/svg"><title>Logo</title><g fill="#5A5A5A" fill-rule="evenodd"><path d="M10.223 10.833c1.712 0 2.75-.703 2.75-2.064 0-1.052-.796-1.7-2.11-1.7h-.826l-.67 3.763h.856zM3.67 1.97h9.677c4.25 0 7.063 2.564 7.063 6.43 0 1.978-.764 3.604-2.11 4.78-.825.68-1.476.966-2.89 1.292l2.412 7.89h-7.334l-1.72-7.95-1.506 7.95H0L3.67 1.97z"/><path d="M25.24 15.584c0 1.02.552 1.64 1.438 1.64 1.223 0 2.022-.903 2.022-2.325 0-1.022-.5-1.634-1.45-1.634-1.16 0-2.01.958-2.01 2.318zm2.767 5.01c-.612.682-.826.898-1.13 1.115-.888.74-2.014 1.146-3.36 1.146-3.302 0-5.198-2.257-5.198-6.152 0-.895.134-1.693.316-2.508 1.7-.966 2.506-2.485 2.755-4.92C22.68 8.09 24.205 7.37 25.97 7.37c1.895 0 2.938.69 4.07 2.484l.273-2.032h6.725l-2.53 14.53H27.73l.275-1.757zM45.898 3.246c0 2.195-2.085 3.88-3.97 3.88-1.958 0-3.36-1.397-3.36-3.345 0-2.04 1.927-3.78 4.22-3.78 1.77 0 3.11 1.33 3.11 3.246zm-7.718 4.6h6.713l-2.664 14.53-6.668.014L38.18 7.847zM49.968 13.167H45.03l.893-5.333h14.953l-7.012 9.148h5.26l-.95 5.38-15.155.015M63.09.653h6.787l-3.945 21.674h-6.788M74.884 15.61c0 1.02.55 1.638 1.437 1.638 1.224 0 2.05-.99 2.05-2.41 0-1.022-.55-1.61-1.5-1.61-1.16 0-1.986 1.02-1.986 2.38zm2.813 5.02c-.612.68-.826.897-1.13 1.113-.888.742-2.11 1.113-3.457 1.113-3.302 0-5.177-2.257-5.198-6.152-.025-4.808 3.406-9.36 7.718-9.36 1.895 0 2.9.705 4.033 2.498l.372-2.008h6.713l-2.606 14.518-6.72.01.275-1.732zM92.99 15.626c0 .96.67 1.67 1.588 1.67 1.162 0 2.002-1.05 2.002-2.38 0-1.02-.58-1.638-1.56-1.638-1.13 0-2.03 1.05-2.03 2.348zM89.106.632l6.7-.025-1.613 9.084c1.29-1.592 2.532-2.345 4.148-2.348 1.377-.002 2.722.588 3.61 1.546 1.008 1.082 1.528 2.814 1.528 4.978 0 5.133-3.374 8.98-7.187 8.988-1.895.004-3.05-.49-4.18-2.158l-.36 1.68-6.532-.014L89.106.632z"/><path d="M104.33 16.147c1.594 1.47 2.614 2.09 3.745 2.09.46 0 .81-.177.81-.486 0-.34-.3-.567-1.68-1.205-1.992-.92-2.964-2.15-2.964-3.975 0-3.03 2.63-5.225 6.3-5.225 2.263 0 3.872.636 5.46 1.907 0 0-1.688 2.175-2.614 3.44-.775-.67-1.413-.897-2.2-.897-.49 0-.745.18-.745.52 0 .308.204.465 1.672 1.053 2.11.897 2.924 1.975 2.92 3.985-.008 3.744-3.02 5.5-6.444 5.5-2.13 0-4.47-.713-6.32-2.124 1.367-1.537 2.062-4.583 2.062-4.583"/></g></svg>
-          </a>
-        </div>
-
-        <div class="four columns">
-          <a class="logo" href="/work.html#drugdev">
-            <img alt="The DrugDev logo." class="drugdev" src="images/drugdev_logo.png"/>
-          </a>
-        </div>
-
-        <div class="four columns">
-          <a class="logo" href="/work.html#kitewheel">
-            <img alt="The Kitewhel logo." class="kitewheel" src="images/kitewheel_logo.png"/>
-          </a>
-        </div>
-      </div>
-    </section>
-
-    <div class="big-spacer">&nbsp;</div>
-
-    <section class="container talks centered-text">
-      <div class="row">
-        <div class="four columns offset-by-four">
-          <h2 style="margin-bottom: 0px;">Public Speaking</h2>
-          <h6><em>Video recordings coming soon!</em></h6>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="six columns">
-          <a href="/talks.html#cryptography">
-            <img alt="The first slide from Dan's talk on public key cryptography." src="images/cryptography_slide.png"/>
-          </a>
+    <div class="full-width-background">
+      <div class="spacer">&nbsp;</div>
+      <section class="work container centered-text">
+        <div class="row">
+          <div class="six columns offset-by-three">
+            <h2>What I've Done</h2>
+          </div>
         </div>
 
-        <div class="six columns">
-          <a href="/talks.html#machine-learning">
-            <img alt="The first slide from Dan's talk on machine learning." src="images/machine_learning_slide.png"/>
-          </a>
-        </div>
-      </div>
-    </section>
+        <div class="row">
+          <div class="four columns">
+            <a class="logo" href="/work.html#raizlabs">
+              <svg class="raizlabs" width="212" height="63" viewBox="0 0 116 23" xmlns="http://www.w3.org/2000/svg"><title>Logo</title><g fill="#5A5A5A" fill-rule="evenodd"><path d="M10.223 10.833c1.712 0 2.75-.703 2.75-2.064 0-1.052-.796-1.7-2.11-1.7h-.826l-.67 3.763h.856zM3.67 1.97h9.677c4.25 0 7.063 2.564 7.063 6.43 0 1.978-.764 3.604-2.11 4.78-.825.68-1.476.966-2.89 1.292l2.412 7.89h-7.334l-1.72-7.95-1.506 7.95H0L3.67 1.97z"/><path d="M25.24 15.584c0 1.02.552 1.64 1.438 1.64 1.223 0 2.022-.903 2.022-2.325 0-1.022-.5-1.634-1.45-1.634-1.16 0-2.01.958-2.01 2.318zm2.767 5.01c-.612.682-.826.898-1.13 1.115-.888.74-2.014 1.146-3.36 1.146-3.302 0-5.198-2.257-5.198-6.152 0-.895.134-1.693.316-2.508 1.7-.966 2.506-2.485 2.755-4.92C22.68 8.09 24.205 7.37 25.97 7.37c1.895 0 2.938.69 4.07 2.484l.273-2.032h6.725l-2.53 14.53H27.73l.275-1.757zM45.898 3.246c0 2.195-2.085 3.88-3.97 3.88-1.958 0-3.36-1.397-3.36-3.345 0-2.04 1.927-3.78 4.22-3.78 1.77 0 3.11 1.33 3.11 3.246zm-7.718 4.6h6.713l-2.664 14.53-6.668.014L38.18 7.847zM49.968 13.167H45.03l.893-5.333h14.953l-7.012 9.148h5.26l-.95 5.38-15.155.015M63.09.653h6.787l-3.945 21.674h-6.788M74.884 15.61c0 1.02.55 1.638 1.437 1.638 1.224 0 2.05-.99 2.05-2.41 0-1.022-.55-1.61-1.5-1.61-1.16 0-1.986 1.02-1.986 2.38zm2.813 5.02c-.612.68-.826.897-1.13 1.113-.888.742-2.11 1.113-3.457 1.113-3.302 0-5.177-2.257-5.198-6.152-.025-4.808 3.406-9.36 7.718-9.36 1.895 0 2.9.705 4.033 2.498l.372-2.008h6.713l-2.606 14.518-6.72.01.275-1.732zM92.99 15.626c0 .96.67 1.67 1.588 1.67 1.162 0 2.002-1.05 2.002-2.38 0-1.02-.58-1.638-1.56-1.638-1.13 0-2.03 1.05-2.03 2.348zM89.106.632l6.7-.025-1.613 9.084c1.29-1.592 2.532-2.345 4.148-2.348 1.377-.002 2.722.588 3.61 1.546 1.008 1.082 1.528 2.814 1.528 4.978 0 5.133-3.374 8.98-7.187 8.988-1.895.004-3.05-.49-4.18-2.158l-.36 1.68-6.532-.014L89.106.632z"/><path d="M104.33 16.147c1.594 1.47 2.614 2.09 3.745 2.09.46 0 .81-.177.81-.486 0-.34-.3-.567-1.68-1.205-1.992-.92-2.964-2.15-2.964-3.975 0-3.03 2.63-5.225 6.3-5.225 2.263 0 3.872.636 5.46 1.907 0 0-1.688 2.175-2.614 3.44-.775-.67-1.413-.897-2.2-.897-.49 0-.745.18-.745.52 0 .308.204.465 1.672 1.053 2.11.897 2.924 1.975 2.92 3.985-.008 3.744-3.02 5.5-6.444 5.5-2.13 0-4.47-.713-6.32-2.124 1.367-1.537 2.062-4.583 2.062-4.583"/></g></svg>
+            </a>
+          </div>
 
-    <div class="big-spacer">&nbsp;</div>
+          <div class="four columns">
+            <a class="logo" href="/work.html#drugdev">
+              <img alt="The DrugDev logo." class="drugdev" src="images/drugdev_logo.png"/>
+            </a>
+          </div>
 
-    <section class="container blog centered-text">
-      <div class="row">
-        <div class="six columns offset-by-three">
-          <h2>The <em>On and On</em> Blog</h2>
+          <div class="four columns">
+            <a class="logo" href="/work.html#kitewheel">
+              <img alt="The Kitewhel logo." class="kitewheel" src="images/kitewheel_logo.png"/>
+            </a>
+          </div>
         </div>
-      </div>
+      </section>
 
-      <div class="row">
-        <div class="four columns offset-by-four">
-          <a href="https://murphydbuffalo.tumblr.com" target="_blank">
-            <img alt="The monkey image from Dan's blog, On and On." class="onandon headshot" src="images/onandon.png"/>
-          </a>
+      <div class="spacer">&nbsp;</div>
+    </div>
+
+    <div class="full-width-background">
+      <div class="spacer">&nbsp;</div>
+
+      <section class="container talks centered-text">
+        <div class="row">
+          <div class="four columns offset-by-four">
+            <h2 style="margin-bottom: 0px;">Public Speaking</h2>
+            <h6><em>Video recordings coming soon!</em></h6>
+          </div>
         </div>
-      </div>
-    </section>
+
+        <div class="row">
+          <div class="six columns">
+            <a href="/talks.html#cryptography">
+              <img alt="The first slide from Dan's talk on public key cryptography." src="images/cryptography_slide.png"/>
+            </a>
+          </div>
+
+          <div class="six columns">
+            <a href="/talks.html#machine-learning">
+              <img alt="The first slide from Dan's talk on machine learning." src="images/machine_learning_slide.png"/>
+            </a>
+          </div>
+        </div>
+      </section>
+
+      <div class="spacer">&nbsp;</div>
+    </div>
+
+    <div class="full-width-background">
+      <div class="spacer">&nbsp;</div>
+
+      <section class="container blog centered-text">
+        <div class="row">
+          <div class="six columns offset-by-three">
+            <h2>The <em>On and On</em> Blog</h2>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="four columns offset-by-four">
+            <a href="https://murphydbuffalo.tumblr.com" target="_blank">
+              <img alt="The monkey image from Dan's blog, On and On." class="onandon headshot" src="images/onandon.png"/>
+            </a>
+          </div>
+        </div>
+      </section>
+    </div>
   </body>
 </html>
