Provide CSS library files locally, rather than linking to a CDN.
We'll be hosting this site on S3 and Cloudfront, so we shouldn't need to use
another CDN to get Skeleton.css and other assets.

--- a/index.html
+++ b/index.html
@@ -26,8 +26,11 @@
       artificial intelligence, boston ai, machine learning algorithms, machine learning algorithm development
     " name="keywords">
 
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Architects+Daughter|Droid+Sans">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
+    <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Architects+Daughter|Droid+Sans"> -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Architects+Daughter">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Droid+Sans">
+    <link rel="stylesheet" href="normalize.css">
+    <link rel="stylesheet" href="skeleton.css">
     <link rel="stylesheet" media="all" href="index.css" />
 
     <!--
