Small changes to the copy in `work.html`

--- a/work.html
+++ b/work.html
@@ -108,15 +108,15 @@
 
         <ul>
           <li>
-            Enforcing a large and complex set of business rules.
+            Enforced a large and complex set of business rules.
           </li>
 
           <li>
-            Working within DrugDev's existing 8+ year old Ruby on Rails codebase.
+            Worked within DrugDev's existing 8+ year old Ruby on Rails codebase.
           </li>
 
           <li>
-            Processing large amounts of data quickly.
+            Processed hundreds of thousands of rows of CSV data quickly.
           </li>
         </ul>
       </div>
@@ -137,22 +137,22 @@
         <h3 class="centered-text">Success in a small team at Kitewheel</h3>
         <p>
           At Kitewheel I was a member of a 3, and later 4, person development
-          team charged with building out the company's product. We were given
-          a large degree of freedom in how we wanted to structure the application,
-          what technologies we wanted to use, and what practices we as an engineering
-          team would adopt.
+          team charged with building out the company's visual programming product.
+          We were given a large degree of freedom in how we wanted to structure
+          the application, and as a junior developer I was able to successfully
+          advocate for the adoption of various best practices and appropriate
+          technologies.
         </p>
 
         <ul>
-          <li>A robust automated test suite (none existed before my arrival).</li>
+          <li>Built a robust automated test suite (none existed before my arrival).</li>
 
           <li>
-            Replacing MongoDB with PostgreSQL.
+            Introduced the use of security best patterns such as CSRF tokens, Content Security Policy,
+            and HSTS.
           </li>
 
-          <li>
-            Use of security best patterns such as CSRF tokens, Content Security Policy,
-            and HSTS.
+          <li>Replaced MongoDB (an inappropriate use case) with PostgreSQL.</li>
         </ul>
       </div>
     </div>
