Better use of semantic HTML element names

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Architects+Daughter|Droid+Sans"> -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Architects+Daughter">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Droid+Sans">
+    <!-- Concatenate these into one file and minify them -->
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="skeleton.css">
     <link rel="stylesheet" media="all" href="index.css" />
@@ -58,8 +59,8 @@
       </a>
     </nav>
 
-    <div class="full-width-background">
-      <section class="container about">
+    <section class="full-width-background">
+      <div class="container about">
         <div class="row">
           <div class="four columns offset-by-four centered-text">
             <h2>Hi, I'm Dan</h2>
@@ -73,11 +74,11 @@
             </a>
           </div>
         </div>
-      </section>
-    </div>
+      </div>
+    </section>
 
-    <div class="full-width-background">
-      <section class="recommendations container">
+    <section class="full-width-background">
+      <div class="recommendations container">
         <div class="row">
           <div class="six columns offset-by-three centered-text">
             <h2>What People Are Saying</h2>
@@ -103,11 +104,11 @@
             </a>
           </div>
         </div>
-      </section>
-    </div>
+      </div>
+    </section>
 
-    <div class="full-width-background">
-      <section class="work container centered-text">
+    <section class="full-width-background">
+      <div class="work container centered-text">
         <div class="row">
           <div class="six columns offset-by-three">
             <h2>What I've Done</h2>
@@ -133,11 +134,11 @@
             </a>
           </div>
         </div>
-      </section>
-    </div>
+      </div>
+    </section>
 
-    <div class="full-width-background">
-      <section class="container talks centered-text">
+    <section class="full-width-background">
+      <div class="container talks centered-text">
         <div class="row">
           <div class="four columns offset-by-four">
             <h2 style="margin-bottom: 0px;">Public Speaking</h2>
@@ -158,11 +159,11 @@
             </a>
           </div>
         </div>
-      </section>
-    </div>
+      </div>
+    </section>
 
-    <div class="full-width-background">
-      <section class="container blog centered-text">
+    <section class="full-width-background">
+      <div class="container blog centered-text">
         <div class="row">
           <div class="six columns offset-by-three">
             <h2>The <em>On and On</em> Blog</h2>
@@ -176,7 +177,7 @@
             </a>
           </div>
         </div>
-      </section>
-    </div>
+      </div>
+    </section>
   </body>
 </html>
