--- a/work.html
+++ b/work.html
@@ -60,7 +60,7 @@
       </a>
     </nav>
 
-    <div class="full-width-background">
+    <section class="full-width-background">
       <div class="container">
         <div class="row">
           <div class="six columns offset-by-three centered-text">
@@ -96,9 +96,9 @@
           </ul>
         </div>
       </div>
-    </div>
+    </section>
 
-    <div class="full-width-background">
+    <section class="full-width-background">
       <div class="container">
         <div class="row" id="drugdev">
           <div class="four columns offset-by-four centered-text">
@@ -135,9 +135,9 @@
           </div>
         </div>
       </div>
-    </div>
+    </section>
 
-    <div class="full-width-background">
+    <section class="full-width-background">
       <div class="container">
         <div class="row" id="kitewheel">
           <div class="four columns offset-by-four centered-text">
@@ -172,6 +172,6 @@
           </div>
         </div>
       </div>
-    </div>
+    </section>
   </body>
 </html>
