Add horizontal rule elements for better visual separation

--- a/index.html
+++ b/index.html
@@ -26,9 +26,7 @@
       artificial intelligence, boston ai, machine learning algorithms, machine learning algorithm development
     " name="keywords">
 
-    <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Architects+Daughter|Droid+Sans"> -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Architects+Daughter">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Droid+Sans">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Architects+Daughter|Droid+Sans">
     <!-- Concatenate these into one file and minify them -->
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="skeleton.css">
