--- a/recommendations.html
+++ b/recommendations.html
@@ -27,9 +27,7 @@
     " name="keywords">
 
 
-    <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Architects+Daughter|Droid+Sans"> -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Architects+Daughter">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Droid+Sans">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Architects+Daughter|Droid+Sans">
     <!-- Concatenate these into one file and minify them -->
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="skeleton.css">
@@ -67,6 +65,8 @@
             <h1>What People Are Saying</h1>
           </div>
         </div>
+
+        <hr/>
 
         <div class="row" id="josh">
           <div class="four columns offset-by-four centered-text">
