--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
       <div class="container about">
         <div class="row">
           <div class="four columns offset-by-four centered-text">
-            <h2>Hi, I'm Dan</h2>
+            <a href="/about.html">
+              <h2>Hi, I'm Dan</h2>
+            </a>
           </div>
         </div>
 
@@ -79,7 +81,9 @@
       <div class="recommendations container">
         <div class="row">
           <div class="six columns offset-by-three centered-text">
-            <h2>What People Are Saying</h2>
+            <a href="/recommendations.html">
+              <h2>What People Are Saying</h2>
+            </a>
           </div>
         </div>
 
@@ -109,7 +113,9 @@
       <div class="work container centered-text">
         <div class="row">
           <div class="six columns offset-by-three">
-            <h2>What I've Done</h2>
+            <a href="/work.html">
+              <h2>What I've Done</h2>
+            </a>
           </div>
         </div>
 
@@ -139,7 +145,10 @@
       <div class="container talks centered-text">
         <div class="row">
           <div class="four columns offset-by-four">
-            <h2 style="margin-bottom: 0px;">Public Speaking</h2>
+            <a href="/talks.html">
+              <h2 style="margin-bottom: 0px;">Public Speaking</h2>
+            </a>
+
             <h6><em>Video recordings coming soon!</em></h6>
           </div>
         </div>
@@ -164,7 +173,9 @@
       <div class="container blog centered-text">
         <div class="row">
           <div class="six columns offset-by-three">
-            <h2>The <em>On and On</em> Blog</h2>
+            <a href="https://murphydbuffalo.tumblr.com" target="_blank">
+              <h2>The <em>On and On</em> Blog</h2>
+            </a>
           </div>
         </div>
 
