Added some additional styling for responive design.

--- a/index.html
+++ b/index.html
@@ -154,13 +154,13 @@
         </div>
 
         <div class="row">
-          <div class="six columns">
+          <div class="six columns" id="cryptography">
             <a href="/talks.html#cryptography">
               <img alt="The first slide from Dan's talk on public key cryptography." src="images/cryptography_slide.png"/>
             </a>
           </div>
 
-          <div class="six columns">
+          <div class="six columns" id="machine-learning">
             <a href="/talks.html#machine-learning">
               <img alt="The first slide from Dan's talk on machine learning." src="images/machine_learning_slide.png"/>
             </a>
