--- a/work.html
+++ b/work.html
@@ -77,7 +77,7 @@
         </div>
       </div>
 
-      <div class="row">
+      <div class="row padding-when-mobile">
         <div class="eight columns offset-by-two">
           <h2 class="centered-text">API development at Raizlabs</h2>
           <p>
@@ -108,7 +108,7 @@
           </div>
         </div>
 
-        <div class="row">
+        <div class="row padding-when-mobile">
           <div class="eight columns offset-by-two">
             <h2 class="centered-text">Enterprise applications at DrugDev</h2>
             <p>
@@ -147,7 +147,7 @@
           </div>
         </div>
 
-        <div class="row">
+        <div class="row padding-when-mobile">
           <div class="eight columns offset-by-two">
             <h3 class="centered-text">Success in a small team at Kitewheel</h3>
             <p>
